# crewai_project

./: README.md  fun_fact.md  pyproject.toml  reviewed_solution.md  reviewed_solution.py  search_results.md
src/crewai_proj2/: main.py  main1.py  main2.py  main3.py  main4.py
src/crewai_proj2/crews/poem_crew/: crew1.py  dev_crew.py
src/crewai_proj2/crews/poem_crew/config/: agents.yaml  tasks.yaml
