[project]
name = "crewai_proj2"
version = "0.1.0"
description = "crewai_proj2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0",
    "litellm>=1.60.2",
]

[project.scripts]
kickoff = "crewai_proj2.main3:kickoff"
plot = "crewai_proj2.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
